--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
 
 section {
     min-height: 100vh;
-    padding: 7rem 9% 4rem;
+    padding: 10rem 9% 2rem;
 }
 
 
@@ -71,14 +71,14 @@ section {
 }
 
 .logo {
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     color: var(--text-color);
     font-weight: 600;
     cursor: default;
 }
 
 .navbar a {
-    font-size: 1.3rem;
+    font-size: 1.7rem;
     color: var(--text-color);
     margin-left: 4rem;
 }
@@ -90,9 +90,10 @@ section {
 }
 
 #menu-icon {
-    font-size: 3.5rem;
+    font-size: 3.6rem;
     color: var(--text-color);
     display: none;
+    
 }
 
 /* home section */
@@ -123,12 +124,12 @@ section {
 }
 
 .home-content h3 {
-    font-size: 1.7rem;
+    font-size: 2.8rem;
     font-weight: 700;
 }
 
 .home-content h3:nth-of-type(2) {
-    margin-bottom: 1.4rem;
+    margin-bottom: 2rem;
 }
 
 span {
@@ -137,45 +138,45 @@ span {
 }
 
 .home-content h1 {
-    font-size: 4rem;
+    font-size: 5.6rem;
     font-weight: 700;
     line-height: 1.3;
 }
 
 .home-content p {
-    font-size: 1.1rem;
+    font-size: 1.6rem;
 }
 
 .social-media a {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 2.4rem;
-    height: 2.4rem;
+    width: 4rem;
+    height: 4rem;
     background: transparent;
     border: .2rem solid var(--main-color);
     border-radius: 50%;
-    font-size: 1.2rem;
+    font-size: 2rem;
     color: var(--main-color);
-    margin: 1.7rem 1rem 2rem 0;
+    margin: 3rem 1.5rem 3rem 0;
     transition: .5s ease;
 }
 
 .social-media a:hover {
     background: var(--main-color);
     color: var(--second-bg-color);
-    box-shadow: 0 0 .5rem var(--main-color);
+    box-shadow: 0 0 1rem var(--main-color);
 }
 
 .btn {
     display: inline-block;
-    padding: 0.7rem 1.7rem;
+    padding: 0.7rem 1rem;
     border-radius: 4rem;
     background: var(--main-color);
     color: var(--second-bg-color);
-    box-shadow: 0 0 0.4rem var(--main-color);
-    letter-spacing: .07rem;
-    font-size: 0.9rem;
+    box-shadow: 0 0 1rem var(--main-color);
+    letter-spacing: .1rem;
+    font-size: 1.3rem;
     font-weight: 600;
     transition: 0.5s ease;
 
@@ -208,24 +209,25 @@ span {
 }
 
 .about-content h2 {
+    font-size: 4.5rem;
     text-align: left;
     line-height: 1.2;
 }
 
 .about-content h3 {
-    font-size: 1.5rem;
+    font-size: 2.2rem;
 }
 
 .about-content p {
-    font-size: 1.1rem;
+    font-size: 1.6rem;
     margin: 2rem 0 2rem;
 }
 
 /* services section designing */
 
 .services h2 {
-    font-size: 3rem;
-    margin-bottom: 3.5rem;
+    font-size: 3.5rem;
+    margin-bottom: 4.5rem;
 }
 
 .services-container {
@@ -233,17 +235,17 @@ span {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    gap: 1.1rem;
+    gap: 2rem;
 
 }
 
 .services-container .services-box {
-    flex: 1 1 22rem;
+    flex: 1 1 30rem;
     background: var(--second-bg-color);
-    padding: 2rem 2rem 2rem;
+    padding: 3rem 2rem 4rem;
     border-radius: 2rem;
     text-align: center;
-    border: .17rem solid var(--bg-color);
+    border: .2rem solid var(--bg-color);
     transition: 0.5s ease;
 }
 
@@ -253,17 +255,17 @@ span {
 }
 
 .services-box i {
-    font-size: 3.5rem;
+    font-size: 7rem;
     color: var(--main-color);
 }
 
 .services-box h3 {
-    font-size: 1.7rem;
+    font-size: 2.6rem;
 }
 
 .services-box p {
-    font-size: 1.1rem;
-    margin: 1rem 0 1rem;
+    font-size: 1.6rem;
+    margin: 1rem 0 3rem;
 }
 
 /* portfolio section design  */
@@ -279,19 +281,15 @@ span {
 }
 
 .portfolio h2 {
-    font-size: 3rem;
-    margin-bottom: 2rem;
+    /* font-size: 3.5rem; */
+    margin-bottom: 4rem;
 }
 
 .portfolio-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    /* 3 columns */
     align-items: center;
-    /* Vertically center */
-    gap: 1rem;
-    width: 85%;
-    /* Proper width taaki items center hoon */
+    gap: 2.5rem;
 }
 
 
@@ -305,8 +303,6 @@ span {
 
 .portfolio-box img {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
     transition: 0.5s ease;
 }
 
@@ -320,13 +316,13 @@ span {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, .4), var(--main-color));
+    background: linear-gradient(rgba(0, 0, 0, .1), var(--main-color));
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     text-align: center;
-    padding: 0 2rem;
+    padding: 0 4rem;
     transform: translateY(100%);
     transition: 0.5s ease;
 
@@ -337,11 +333,11 @@ span {
 }
 
 .portfolio-layer h4 {
-    font-size: 1.7rem;
+    font-size: 3rem;
 }
 
 .portfolio-layer p {
-    font-size: 1.1rem;
+    font-size: 1.6rem;
     margin: .3rem 0 1rem;
 }
 
@@ -349,31 +345,31 @@ span {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 2.2rem;
-    height: 2.2rem;
+    width: 3.5rem;
+    height: 3.5rem;
     background: var(--text-color);
     border-radius: 50%;
 
 }
 
 .portfolio-layer a {
-    font-size: 1.3rem;
+    font-size: 1.7rem;
     color: var(--second-bg-color);
 }
 
 /* contact section design  */
 
 .contact h2 {
-    font-size: 3rem;
-    margin-bottom: 1.5rem;
+    font-size: 3.5rem;
+    margin-bottom: 3rem;
 
 }
 
 .contact form {
-    max-width: 45rem;
-    margin: 0.8rem auto;
+    max-width: 70rem;
+    margin: 1rem auto;
     text-align: center;
-    margin-bottom: 1.5rem;
+    margin-bottom: 3rem;
 }
 
 .contact form .input-box {
@@ -385,16 +381,16 @@ span {
 .contact form .input-box input,
 .contact form textarea {
     width: 100%;
-    padding: 0.8rem;
-    font-size: 1.1rem;
+    padding: 1.5rem;
+    font-size: 1.6rem;
     color: var(--text-color);
     background: var(--second-bg-color);
-    border-radius: .5rem;
-    margin: .35rem 0;
+    border-radius: .8rem;
+    margin: .7rem 0;
 }
 
 .contact form .input-box input {
-    width: 49.5%;
+    width: 49.2%;
 }
 
 .contact form textarea {
@@ -402,7 +398,7 @@ span {
 }
 
 .contact form .btn {
-    margin-top: .7rem;
+    margin-top: 2rem;
     cursor: pointer;
 }
 
@@ -413,20 +409,20 @@ span {
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    padding: 0.7rem 9%;
+    padding: 1.5rem 9%;
     background: var(--second-bg-color);
 
 }
 
 .footer-text p {
-    font-size: 0.8rem;
+    font-size: 1.3rem;
 }
 
 .footer-iconTop a {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    padding: 0.5rem;
+    padding: 0.8rem;
     background: var(--main-color);
     border-radius: .8rem;
     transition: 0.5s ease;
@@ -437,7 +433,7 @@ span {
 }
 
 .footer-iconTop a i {
-    font-size: 1.5rem;
+    font-size: 2.4rem;
     color: var(--second-bg-color);
 }
 
@@ -450,23 +446,32 @@ span {
         font-size: 55%;
     }
 
-    .contact form {
-        max-width: 60vw;
-        min-height: auto;
-    }
+   
 }
 
 @media (max-width:991px) {
     .header {
-        padding: 0.8rem 3%;
+        padding: 2rem 3%;
     }
 
     section {
-        padding: 5rem 3% 2rem;
+        padding: 10rem 3% 2rem;
+    }
+
+    .services {
+        padding-bottom: 7rem;
+    }
+
+    .portfolio {
+        padding-bottom: 7rem;
+    }
+
+    .contact {
+        min-height: auto;
     }
 
     .footer {
-        padding: 0.3rem 3%;
+        padding: 2rem 3%;
     }
 
 }
@@ -494,7 +499,7 @@ span {
 
     .navbar a {
         display: block;
-        font-size: 1.4rem;
+        font-size: 2rem;
         margin: 3rem 0;
     }
 
@@ -503,106 +508,59 @@ span {
     }
 
     .home-content h3 {
-        font-size: 1.3rem;
+        font-size: 2.6rem;
     }
 
     .home-content h1 {
-        font-size: 2.7rem;
+        font-size: 5rem;
     }
-
-    p {
-        font-size: 0.9rem;
-    }
-
-    .logo {
-        font-size: 1.5rem;
-    }
-
-    #menu-icon {
-        font-size: 2rem;
-    }
-
-    .bx-x-circle {
-        font-size: 2rem;
-    }
-
     .homme-img img {
         width: 70vw;
-        margin-top: 2rem;
+        margin-top: 4rem;
     }
 
     .about {
         flex-direction: column-reverse;
     }
 
-    .about-img img {
+    .about img {
         width: 70vw;
+        margin-top: 4rem;
     }
 
-    .services .heading {
-        margin-top: 0rem;
+    .services h2 {
+        margin-bottom: 3rem;
     }
 
-    .services {
-        padding-top: 5rem;
-        padding-bottom: 4rem;
-    }
-
-    .portfolio {
-        padding-top: 5rem;
-    }
 
     .portfolio h2 {
-        margin-bottom: 2.5rem;
+        margin-bottom: 3rem;
     }
 
     .portfolio-container {
         grid-template-columns: repeat(2, 1fr);
     }
-
-    .portfolio-layer a {
-        width: 2rem;
-        height: 2rem;
-
-    }
-
-    .portfolio-layer p {
-        font-size: 0.9rem;
-        margin: .3rem 0 0.7rem;
-    }
-
-
 }
 
-@media (max-width:330px) {
+@media (max-width:617px) {
     .portfolio-container {
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: 1fr;
 
     }
 }
 
-@media (max-width:550px) {
-
-    .contact form {
-        max-width: 90rem;
-    }
-}
-
-@media (max-width:360px) {
+@media (max-width:450px) {
     html {
+
         font-size: 50%;
     }
-
     .contact form .input-box input {
         width: 100%;
     }
 }
 
-@media (max-width:220px) {
-    html {
-        font-size: 50%;
-    }
-
+@media (max-width:365px) {
+   
     .homme-img img {
         width: 90vw;
     }
@@ -610,16 +568,19 @@ span {
     .about-img img {
         width: 90vw;
     }
-
-    .contact form .input-box input {
-        width: 100%;
-    }
-
     .footer {
         flex-direction: column-reverse;
     }
 
-    .footer-iconTop a {
-        margin-bottom: 0.5rem;
+    .footer p{
+        text-align: center;
+        margin-top: 2rem;
     }
 }
+
+@media (max-width:220px) {
+    .portfolio-layer h3{
+        font-size: 2rem;
+    }
+}
+
